--- a/README
+++ b/README
@@ -3,4 +3,13 @@ To bring up the server on cli:
 To run the server in intellij:
     Run -> Edit Configuration -> + -> Maven -> Give it a name (say "server-run") -> Put "spring-boot:run" on Command Line -> OK
     Run -> Debug -> server-run
-    
+To start a server on AWS EC2 AMI instance:
+    Create an instance
+    Use a security group that allows for SSH/HTTP connections
+    SSH into the instance
+    sudo yum update
+    Install Oracel Jdk:
+        wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u141-b15/336fa29ff2bb4ef291e347e091f7f4a7/jdk-8u141-linux-x64.rpm
+        sudo yum install -y jdk-8u141-linux-x64.rpm
+    Verify Java version:
+        java -version
