--- a/README
+++ b/README
@@ -1,42 +1,1 @@
-To bring up the server on cli:
-    ./mvnw spring-boot:run
-To run the server in intellij:
-    Run -> Edit Configuration -> + -> Maven -> Give it a name (say "server-run") -> Put "spring-boot:run" on Command Line -> OK
-    Run -> Debug -> server-run
-To start a server on AWS EC2 AMI instance:
-    Create an instance
-    Use a security group that allows for SSH/HTTP connections
-    SSH into the instance
-    sudo yum update
-    Install Oracel Jdk:
-        wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u141-b15/336fa29ff2bb4ef291e347e091f7f4a7/jdk-8u141-linux-x64.rpm
-        sudo yum install -y jdk-8u141-linux-x64.rpm
-    Verify Java version:
-        java -version
-    Set JAVA_HOME env var:
-        export JAVA_HOME=/usr/java/default/
-    Bring up the server:
-        # Running this command keeps the server alive after you c^C and close SSH connection
-        nohup ./mvnw spring-boot:run &
-To connect to RDS from EC2:
-    Set RDS rule to only allow traffic from same VPS (put them in the same VPS!)
-    Install psql on EC2:
-        connect to EC2 via SSH
-        # I'm sure something here are not necessary
-        sudo yum install postgresql postgresql-server postgresql-devel postgresql-contrib postgresql-docs
-        # This is probably not necessary
-        sudo service postgresql initdb
-    Connect to RDS via psql
-        psql --host=$HOST --username=$USERNAME --dbname=$DB
-    Ingest data to RDS from EC2
-        Trim some columns to only the needed ones (use Google sheet)
-        Replace n/a with empty:
-            sed -i 's/,n\/a/,/g' companylist_amex.csv
-        psql --host=$HOST --username=$USERNAME --dbname=$DB -c "\copy company_dev (symbol,name,ipoyear,sector,industry)  from 'companylist/companylist_nyse.csv' CSV"
-        The data from three tables contain duplicates, which causes errors. Do this:
-            Create a temp table 'playground', ingest data into playground first
-            Then run this query:
-                INSERT INTO company_dev
-                select *
-                from playground
-                on conflict do nothing;
+Hobby project to build a stock simulator backend server hosted on AWS.
